# DCProtectedChat

./: .gitignore  README.md  render.yaml
.github/workflows/: ci.yml
client/: build.bat  build.sh  installer.iss  pyproject.toml
client/app/: main.py
client/app/crypto/: groups.py  keys.py  ratchet.py  session.py  x3dh.py
client/tests/: test_crypto.py
client/ui/: index.html
server/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
server/app/: db.py  main.py  models.py  schemas.py
server/app/migrations/: env.py
server/app/migrations/versions/: 20250323_0001_a1b2c3d4e5f6_initial_schema.py
server/tests/: conftest.py  test_api.py
shared/: pyproject.toml
shared/p2shared/: envelope.py
