[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12,<4.0"

dependencies = [
    "fastapi (>=0.129.2,<0.130.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "p2shared @ file:///C:/Users/frede/p2-secure-groupchat/shared"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.2,<0.16.0)"
]
